--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
@@ -36,6 +37,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/react": "^18.0.26",
     "axios": "^1.2.2",
     "react": "^18.2.0",
