--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,6 @@
       "noEmit": false,
       "jsx": "react-jsx"
     },
-    "include": [
-      "src"
-    ]
+    "include": ["src/components", "src/custom.d.ts"]
   }
   
