--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "noEmit": false,
       "jsx": "react-jsx"
     },
-    "include": ["src/components", "src/custom.d.ts"]
+    "include": ["src/components", "src/custom.d.ts", "src/pages/Profile"]
   }
   
