--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "^18.0.26",
     "axios": "^1.2.2",
     "jest-react": "^0.14.0",
+    "normalize.less": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
