--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.7",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
@@ -40,15 +41,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "jest-react": "^0.14.0",
+    "konva": "^8.4.2",
     "normalize.less": "^1.0.0",
+    "nouislider-react": "^3.4.1",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
-    "resolve-cwd": "^3.0.0"
+    "resolve-cwd": "^3.0.0",
+    "styled-components": "^5.3.6",
+    "tailwind-merge": "^1.10.0"
   }
 }
