--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux": "^4.2.0",
     "resolve-cwd": "^3.0.0",
     "styled-components": "^5.3.6",
-    "tailwind-merge": "^1.10.0"
+    "tailwind-merge": "^1.10.0",
+    "use-image": "^1.1.0"
   }
 }
