--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.5",
     "react-redux": "^8.0.5",
+    "react-resize-detector": "^8.0.4",
     "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
