--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,22 @@
-{ 
-    "compileOnSave": true,
-    "compilerOptions": {
-      "target": "es5",
-      "isolatedModules": false,
-      
-      "lib": [
-        "dom",
-        "dom.iterable",
-        "esnext"
-      ],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "noFallthroughCasesInSwitch": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "noEmit": false,
-      "jsx": "react-jsx"
-    },
-    "include": ["./src/**"],
-  }
-  
+{
+  "compileOnSave": true,
+  "compilerOptions": {
+    "target": "es5",
+    "isolatedModules": false,
+
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "noEmit": false,
+    "jsx": "react-jsx"
+  },
+  "include": ["./src/**"]
+}
